--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.core:core-ktx:1.2.0'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
   implementation project(':lib')
 }
